--- a/Ex20240521/src/main/webapp/Ex7_Kakaomap.html
+++ b/Ex20240521/src/main/webapp/Ex7_Kakaomap.html
@@ -26,3 +26,23 @@
 </script>
 </body>
 </html>
+
+<!-- 
+    클라이언트가 서버에게 요청을 할 때는 HttpServletRequest 객체로 전달된다.
+    요청을 보내면 서버의 WAS(Web Application Server)[예시: nginX, Httpd,...]에 가장 먼저 접근하게 된다.
+    해석이 필요없는 정적 자료형을 받는다. HTML, CSS, TXT.
+    Servlte/JSP는 동적 자료이며 JSP는 Servlet으로 변환되어 전달된다.
+    해당 자료들이 주어지면 WAS는 Continer[예시: tomcat]에게 해당 자료를 전달한다.
+    Container 안에는 servlet이 있다. 요청했지만 없는 Servlet의 경우 만들어지며 만들어진 후 바로(생성자 후에)
+    init()이 호출되며(한 번만 호출된다) 다음에 service()가 호출되는데 요청할 때마다 호출되는 함수이다.
+
+    그런 후 service()에서는 요청의 종류에 따라 두 갈래로 나뉘게 되는데 둘 중 하나만 호출된다.
+    doGet()과 doPost()수행을 마쳤더라도 계속 활성화되어 계속 들어오는 요청을 수행한다.
+
+    그러던 중 WAS나 Container가 내려갈 때(서버가 종료될 때) destroy()를 호출한다.
+    이때, destroy()는 한 번만 호출된다.
+
+    처리 후에는 HTML(기본값)로 응답해준다. 응답 자료형은 XML, JSON등도 가능하다. 
+
+
+-->
